solved white space on the right side

--- a/src/routes/header/header.styles.scss
+++ b/src/routes/header/header.styles.scss
@@ -119,6 +119,7 @@
 // iPhones
 @media (max-width: 430px) {
   .header-container {
+    width: 100% !important;
     .header-inner-container {
       .header-logo-and-nav-container {
         .header-nav-container {
